# fake_content

./: .env.example  .gitignore  README.md  document_loader.py  docx_integrator.py  docx_skill_integrator.py  docx_utils.py  graph_state.py  llm_config.py  main.py  pyproject.toml  render.yaml  requirements.txt  schemas.py
agents/: __init__.py  answer_agent.py  chart_agent.py  image_agent.py  integrator.py  smart_parser.py  template_planner.py
backend/: __init__.py  main.py  pipeline.py
backend/defaults/: good_template.docx
docx/: SKILL.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  BrandHeader.tsx  ContinueAction.tsx  GenerateForm.tsx  ResourcesUploader.tsx  StepRail.tsx  TemplateHelp.tsx  TemplateUploader.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  limits.ts  sections.ts
frontend/scripts/: render-build.sh
tests/: test_chart_agent.py  test_docx_marker_integrator.py  test_integrator_coverage.py
